--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "heroicons": "^2.2.0",
-    "next": "15.1.0",
+    "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -28,6 +28,7 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
